@@ -33,6 +33,7 @@ import org.hamcrest.Matchers;
 import org.junit.BeforeClass;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 
@@ -53,7 +54,7 @@ public class HDRPreAggregatedPercentileRanksAggregatorTests extends AggregatorTe
     @Override
     protected List<ValuesSourceType> getSupportedValuesSourceTypes() {
         // Note: this is the same list as Core, plus Analytics
-        return List.of(CoreValuesSourceType.NUMERIC,
+        return Arrays.asList(CoreValuesSourceType.NUMERIC,
             CoreValuesSourceType.DATE,
             CoreValuesSourceType.BOOLEAN,
             AnalyticsValuesSourceType.HISTOGRAM);
